adding log, sqrt

--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,10 @@
    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css"
    type="text/css">
   <style>
+    body {
+      max-width: 65ch;
+      margin: 1ch;
+    }
     .expr {
       font-family: "Courier New", monospace;
     }
@@ -45,7 +49,10 @@
     Operators: <span class="expr">+</span> ,
     <span class="expr">-</span> , <span class="expr">*</span>,
     <span class="expr">^</span> . Constants: <span class="expr">e</span> ,
-    <span class="expr">pi</span> . Functions: <span class="expr">sin</span> ,
+    <span class="expr">pi</span> . Functions: 
+    <span class="expr">sqrt</span> ,
+    <span class="expr">log</span> (natural logarithm) ,
+    <span class="expr">sin</span> ,
     <span class="expr">cos</span>
   </p>
 
