link to the source

--- a/demo.html
+++ b/demo.html
@@ -43,6 +43,8 @@
 <body onload="recalculateDiff()">
   <h1>Math.diff.js demo</h1>
 
+  <p>Get the <a href="https://github.com/hausen/math.diff.js">source code on GitHub</a>!</p>
+
   <p>Enter the expression you wish to differentiate below.</p>
 
   <p>
