--- a/demo.html
+++ b/demo.html
@@ -50,6 +50,7 @@
   <p>
     Operators: <span class="expr">+</span> ,
     <span class="expr">-</span> , <span class="expr">*</span>,
+    <span class="expr">/</span>,
     <span class="expr">^</span> . Constants: <span class="expr">e</span> ,
     <span class="expr">pi</span> . Functions: 
     <span class="expr">sqrt</span> ,
