implementing all trig functions

--- a/demo.html
+++ b/demo.html
@@ -56,7 +56,11 @@
     <span class="expr">sqrt</span> ,
     <span class="expr">log</span> (natural logarithm) ,
     <span class="expr">sin</span> ,
-    <span class="expr">cos</span>
+    <span class="expr">cos</span> ,
+    <span class="expr">tan</span> ,
+    <span class="expr">sec</span> ,
+    <span class="expr">csc</span> ,
+    <span class="expr">cot</span>
   </p>
 
   <p><input id="expr" oninput="recalculateDiff()"
